
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int sscanf (char*,char*,int*,int*,int*,int*) ;

int
isip ( char *ip )
{
 int a, b, c, d;

 if ( !sscanf ( ip, "%d.%d.%d.%d", &a, &b, &c, &d ) )
  return ( 0 );
 if ( a < 1 )
  return ( 0 );
 if ( a > 255 )
  return 0;
 if ( b < 0 )
  return 0;
 if ( b > 255 )
  return 0;
 if ( c < 0 )
  return 0;
 if ( c > 255 )
  return 0;
 if ( d < 0 )
  return 0;
 if ( d > 255 )
  return 0;
 return 1;
}
